[gd_scene load_steps=28 format=1]

[ext_resource path="res://scenes/player.gd" type="Script" id=1]
[ext_resource path="res://images/aisha.png" type="Texture" id=2]
[ext_resource path="res://images/small_objects.png" type="Texture" id=3]
[ext_resource path="res://sounds/crystal.tres" type="Sample" id=4]
[ext_resource path="res://sounds/jump.tres" type="Sample" id=5]
[ext_resource path="res://sounds/step.tres" type="Sample" id=6]
[ext_resource path="res://sounds/sword.tres" type="Sample" id=7]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 4, 11 )

[sub_resource type="Animation" id=2]

length = 0.35
loop = false
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("TopBody:frame")
tracks/0/interp = 2
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.05, 0.1, 0.15 ),
"transitions": FloatArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 48, 49, 50, 51 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:create_sword")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:need_synchro")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0.35 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("SamplePlayer:play/play")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ "sword" ]
}
tracks/4/type = "method"
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/imported = false
tracks/4/keys = {
"times": FloatArray( 0.1, 0.2 ),
"transitions": FloatArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "fast_attack"
}, {
"args": [  ],
"method": "slow_attack"
} ]
}

[sub_resource type="Animation" id=3]

resource/name = "Attack2"
length = 0.35
loop = false
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("TopBody:frame")
tracks/0/interp = 2
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.05, 0.1, 0.15 ),
"transitions": FloatArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 56, 57, 58, 59 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:create_sword")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:need_synchro")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0.35 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("SamplePlayer:play/play")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ "sword" ]
}
tracks/4/type = "method"
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/imported = false
tracks/4/keys = {
"times": FloatArray( 0.1, 0.2 ),
"transitions": FloatArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "fast_attack"
}, {
"args": [  ],
"method": "slow_attack"
} ]
}

[sub_resource type="Animation" id=4]

length = 0.1
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("TopBody:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.05 ),
"transitions": FloatArray( 1, 1 ),
"update": 1,
"values": [ 35, 36 ]
}

[sub_resource type="Animation" id=5]

length = 0.6
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("TopBody:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.6 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0, 5 ]
}

[sub_resource type="Animation" id=6]

length = 0.1
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("TopBody:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.05 ),
"transitions": FloatArray( 1, 1 ),
"update": 1,
"values": [ 32, 33 ]
}

[sub_resource type="Animation" id=7]

length = 0.4
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("TopBody:frame")
tracks/0/interp = 0
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.75 ),
"transitions": FloatArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 16, 17, 18, 19, 20, 21, 22, 23, 23 ]
}

[sub_resource type="Animation" id=8]

resource/name = "StrongAttack"
length = 0.5
loop = false
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("TopBody:frame")
tracks/0/interp = 2
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.05, 0.1, 0.15 ),
"transitions": FloatArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 48, 49, 50, 51 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:need_synchro")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0.5 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SamplePlayer:play/play")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ "sword" ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"values": [ {
"args": [  ],
"method": "strong_slashh"
} ]
}
tracks/4/type = "value"
tracks/4/path = NodePath(".:attacking")
tracks/4/interp = 1
tracks/4/imported = false
tracks/4/keys = {
"times": FloatArray( 0.4 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=9]

resource/name = "Victory"
length = 0.4
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("TopBody:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.1, 0.2, 0.3 ),
"transitions": FloatArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 52, 53, 54, 55 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SamplePlayer:play/play")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ "crystal" ]
}

[sub_resource type="Animation" id=10]

length = 0.1
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("LowerBody:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.05 ),
"transitions": FloatArray( 1, 1 ),
"update": 1,
"values": [ 43, 44 ]
}

[sub_resource type="Animation" id=11]

length = 0.5
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("LowerBody:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 8, 13 ]
}

[sub_resource type="Animation" id=12]

length = 0.1
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("LowerBody:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.05 ),
"transitions": FloatArray( 1, 1 ),
"update": 1,
"values": [ 40, 41 ]
}

[sub_resource type="Animation" id=13]

length = 0.8
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("LowerBody:frame")
tracks/0/interp = 0
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6, 0.65, 0.7, 0.75 ),
"transitions": FloatArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 24, 25, 26, 27, 28, 29, 30, 31, 24, 25, 26, 27, 28, 29, 30, 31 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SamplePlayer:play/play")
tracks/1/interp = 2
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0.2, 0.4, 0.6 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 1,
"values": [ "step", "step", "step" ]
}

[sub_resource type="Animation" id=14]

resource/name = "Victory"
length = 0.1
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("LowerBody:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ 34 ]
}

[sub_resource type="Animation" id=15]

length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("TopBody:visibility/visible")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": FloatArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, false, true, false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("LowerBody:visibility/visible")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": FloatArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, false, true, false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:vulnerable")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0.5 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=16]

resource/name = "UpNone"
length = 0.1
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Upgrade:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ 62 ]
}

[sub_resource type="Animation" id=17]

length = 0.6
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Upgrade:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": FloatArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 56, 57, 58, 59, 60, 61 ]
}

[sub_resource type="Animation" id=18]

length = 2.4
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Upgrade:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2, 2.3 ),
"transitions": FloatArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55 ]
}

[sub_resource type="RectangleShape2D" id=19]

custom_solver_bias = 0.0
extents = Vector2( 4, 11 )

[sub_resource type="SampleLibrary" id=20]

samples/crystal = {
"db": -12.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 4 )
}
samples/jump = {
"db": 0.0,
"pitch": 1.5,
"priority": 0,
"sample": ExtResource( 5 )
}
samples/step = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 6 )
}
samples/sword = {
"db": 0.0,
"pitch": 1.25,
"priority": 0,
"sample": ExtResource( 7 )
}

[node name="Player" type="KinematicBody2D" groups=[
"Player",
]]

input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, -11 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
collision/margin = 0.08
script/script = ExtResource( 1 )
__meta__ = {
"__editor_plugin_screen__": "Script"
}
attacking = false
vulnerable = true
create_sword = true
need_synchro = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

visibility/visible = false
transform/pos = Vector2( 0, -11 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = -1

[node name="TopBody" type="Sprite" parent="."]

transform/pos = Vector2( 0, -16 )
z/z = 2
texture = ExtResource( 2 )
vframes = 11
hframes = 8
frame = 59
__meta__ = {
"_edit_lock_": true
}

[node name="LowerBody" type="Sprite" parent="."]

transform/pos = Vector2( -0.142395, -16 )
z/z = 1
texture = ExtResource( 2 )
vframes = 11
hframes = 8
frame = 40
__meta__ = {
"_edit_lock_": true
}

[node name="Upgrade" type="Sprite" parent="."]

transform/pos = Vector2( 0, -40 )
texture = ExtResource( 3 )
vframes = 8
hframes = 8
frame = 62

[node name="TopAnim" type="AnimationPlayer" parent="."]

playback/process_mode = 0
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/Attack = SubResource( 2 )
anims/Attack2 = SubResource( 3 )
anims/Fall = SubResource( 4 )
anims/Idle = SubResource( 5 )
anims/Jump = SubResource( 6 )
anims/Run = SubResource( 7 )
anims/StrongAttack = SubResource( 8 )
anims/Victory = SubResource( 9 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "Fall"

[node name="BotAnim" type="AnimationPlayer" parent="."]

playback/process_mode = 0
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/Fall = SubResource( 10 )
anims/Idle = SubResource( 11 )
anims/Jump = SubResource( 12 )
anims/Run = SubResource( 13 )
anims/Victory = SubResource( 14 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "Fall"

[node name="Effects" type="AnimationPlayer" parent="."]

playback/process_mode = 0
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/Invulnerable = SubResource( 15 )
anims/UpNone = SubResource( 16 )
anims/UpShield = SubResource( 17 )
anims/UpStrongSlash = SubResource( 18 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="Hitbox" type="Area2D" parent="."]

editor/display_folded = true
input/pickable = true
shapes/0/shape = SubResource( 19 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, -11 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D1" type="CollisionShape2D" parent="Hitbox"]

transform/pos = Vector2( 0, -11 )
shape = SubResource( 19 )
trigger = false
_update_shape_index = -1

[node name="AttackSpot" type="Position2D" parent="."]

transform/pos = Vector2( 19, -15 )
z/z = 5

[node name="SamplePlayer" type="SamplePlayer" parent="."]

config/polyphony = 1
config/samples = SubResource( 20 )
default/volume_db = 0.0
default/pitch_scale = 1.0
default/pan = 0.0
default/depth = 0.0
default/height = 0.0
default/filter/type = 0
default/filter/cutoff = 0.0
default/filter/resonance = 0.0
default/filter/gain = 0.0
default/reverb_room = 2
default/reverb_send = 0.0
default/chorus_send = 0.0

[node name="Jump" type="Timer" parent="."]

process_mode = 0
wait_time = 1.0
one_shot = true
autostart = false

[connection signal="body_enter" from="Hitbox" to="." method="_on_Hitbox_body_enter"]

[connection signal="timeout" from="Jump" to="." method="_on_Jump_timeout"]


